--- a/www-root/index.html
+++ b/www-root/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>TypeScript HTML App</title>
+    <title>Alan Pong Game</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
     <script src="bower_components/phaser-ce/build/phaser.min.js"></script>
     <script src="app.js"></script>
